# vacancy_parser

./: .gitignore  main.py  pyproject.toml
src/: api_manager.py  file_manager.py  utils.py  vacancy.py
