[tool.poetry]
name = "vacancy-parser"
version = "0.1.0"
description = ""
authors = ["Arty152 <zhirkov.arty@gmail.com>"]
readme = "README.md"
packages = [{include = "vacancy_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyproject-toml = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
